--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Navia Coding Challenge",
   "main": "server.js",
   "scripts": {
-    "start": "node server",
-    "server": "nodemon server"
+    "start": "nodemon server"
   },
   "repository": {
     "type": "git",
